Refactored to use pipenv instead of venv

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-source env/Scripts/activate
-export APP_SETTINGS="config.DevelopmentConfig"
-export DATABASE_URL="postgresql://postgres@localhost/sodiumweb_dev"
+APP_SETTINGS="config.DevelopmentConfig"
+DATABASE_URL="postgresql://postgres@localhost/sodiumweb_dev"
